Update README.md
Added temporary information for the glmnet branch to README.md